--- a/derby.properties
+++ b/derby.properties
@@ -1,3 +1,4 @@
 #Java DB Properties File
 #Wed Oct 09 19:34:14 PDT 2019
 derby.storage.fileSyncTransactionLog=true
+derby.database.sqlAuthorization=true
